--- a/ark-saconfig.json
+++ b/ark-saconfig.json
@@ -2222,5 +2222,131 @@
             "False": "false",
             "True": "true"
         }
-    }
+    },
+		{
+        "DisplayName": "Egg Laying Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "Sets the interval for how long it takes for eggs to lay. Fertilized or Unfertilized. Lowering this value increases the amount of eggs during a given time",
+        "Keywords": "egg,breeding,multiplier,layegginterval",
+        "FieldName": "LayEggIntervalMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.LayEggIntervalMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	    {
+        "DisplayName": "Egg Hatch Speed Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "Sets the time it takes to hatch fertilized eggs. Lowering this value decreases the time to hatch",
+        "Keywords": "egg,hatch,speed,multiplier,breeding",
+        "FieldName": "EggHatchSpeedMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.EggHatchSpeedMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	    {
+        "DisplayName": "Mating Interval Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "Sets the scaling factor for the length of time for the mating cooldown. Lowering this value decreases the cooldown",
+        "Keywords": "mating,breeding,speed,multiplier,matinginterval",
+        "FieldName": "MatingIntervalMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.MatingIntervalMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	{
+        "DisplayName": "Baby Imprint Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "Sets the imprint multiplier during baby growth. A higher number decreases the amount of times a baby needs to imprint",
+        "Keywords": "imprint,breeding,growth,multipllier,babyimprintmultiplier",
+        "FieldName": "BabyImprintAmountMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyImprintAmountMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	{
+        "DisplayName": "Baby Mature Speed Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "Sets the maturation speed multiplier for baby growth. A higher number decreases the amount of times a baby needs to become juvenile or adult",
+        "Keywords": "speed,mature,breeding,growth,multipllier,babymaturespeedmultiplier",
+        "FieldName": "BabyMatureSpeedMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyMatureSpeedMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	{
+        "DisplayName": "Baby Cuddle Interval Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "Sets the time between cuddles needed for baby growth. A lower number decreases the time between cuddles",
+        "Keywords": "cuddle,interval,mature,breeding,growth,multipllier,babycuddleintervalmultiplier",
+        "FieldName": "BabyCuddleIntervalMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyCuddleIntervalMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	{
+        "DisplayName": "Baby Cuddle Grace Period Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "How long after delaying cuddling with the baby before imprinting quality starts to decrease.. A lower number decreases the time between cuddles",
+        "Keywords": "cuddle,grace,interval,mature,breeding,growth,multipllier,babycuddlegraceperiodmultiplier",
+        "FieldName": "BabyCuddleGracePeriodMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyCuddleGracePeriodMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	{
+        "DisplayName": "Baby Cuddle Lose Imprint Quality Speed Multiplier",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "How fast the imprinting quality decreases after the grace period if you haven't yet cuddled with the baby.. A lower number decreases the time between cuddles",
+        "Keywords": "cuddle,interval,mature,breeding,growth,multipllier,babycuddleintervalmultiplier",
+        "FieldName": "BabyCuddleLoseImprintQualitySpeedMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyCuddleLoseImprintQualitySpeedMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
+	{
+        "DisplayName": "Baby Food Consumption Speed",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Breeding:tune:3",
+        "Description": "How fast the imprinting quality decreases after the grace period if you haven't yet cuddled with the baby.. A lower number decreases the time between cuddles",
+        "Keywords": "food,interval,mature,breeding,growth,multipllier,babyfoodconsumptionspeedmultiplier",
+        "FieldName": "BabyFoodConsumptionSpeedMultiplier",
+        "InputType": "number",
+        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyFoodConsumptionSpeedMultiplier",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "1.000000",
+        "Placeholder": "1.000000",
+        "EnumValues": {}
+    },
 ]
