--- a/ark-saconfig.json
+++ b/ark-saconfig.json
@@ -54,6 +54,8 @@
             "Aberration_WP": "Aberration",
             "Extinction_WP": "Extinction",
             "Astraeos_WP": "Astraeos",
+            "Ragnarok_WP": "Ragnarok",
+            "Valguero_WP": "Valguero",
             "{{CustomMap}}": "--Custom--"
         }
     },
@@ -245,7 +247,7 @@
         "DisplayName": "MultiHome IP Binding",
         "Category": "ARK SA:stadia_controller",
         "Subcategory": "Server:dns:1",
-        "Description": "If required, you can change the binding of the server and RCON by changing the 'Server IP Address' setting under Security and Privacy. NOTE: The IP must be reachable by AMP, otherwise AMP's console won't work",
+        "Description": "If required, you can change the binding of the server and RCON by changing the Application IP Binding for this instance. NOTE: The IP must be reachable by AMP, otherwise AMP's console won't work",
         "Keywords": "ip,binding,address,multihome",
         "FieldName": "MultiHome",
         "InputType": "hidden",
@@ -1987,10 +1989,25 @@
         "EnumValues": {}
     },
     {
+        "DisplayName": "Enable Cluster",
+        "Category": "ARK SA:stadia_controller",
+        "Subcategory": "Clusters:share:5",
+        "Description": "If set, the use of a server cluster will be enabled. Requires Cluster Directory Override and Cluster ID to be set",
+        "Keywords": "cluster,enable",
+        "FieldName": "EnableCluster",
+        "InputType": "checkbox",
+        "ParamFieldName": "EnableCluster",
+        "DefaultValue": "-ClusterDirOverride=\"{{ClusterDirOverride}}\" -clusterID={{clusterID}} ",
+        "EnumValues": {
+            "False": "",
+            "True": "-ClusterDirOverride=\"{{ClusterDirOverride}}\" -clusterID={{clusterID}} "
+        }
+    },
+    {
         "DisplayName": "Cluster Directory Override",
         "Category": "ARK SA:stadia_controller",
         "Subcategory": "Clusters:share:5",
-        "Description": "Sets the path to a shared cluster directory for a server cluster. The cluster directory must be accessible to all cluster servers. If the server is in Docker, the directory must be mounted in the container",
+        "Description": "Sets the path to a shared cluster directory for a server cluster. The cluster directory must be accessible to all cluster servers. If the server is in Docker, the directory must be mounted in the container. Requires Enable Cluster to be set",
         "Keywords": "cluster,directory,override,clusterdiroverride",
         "FieldName": "ClusterDirOverride",
         "InputType": "text",
@@ -2004,7 +2021,7 @@
         "DisplayName": "Cluster ID",
         "Category": "ARK SA:stadia_controller",
         "Subcategory": "Clusters:share:5",
-        "Description": "Sets the cluster ID for a server cluster. The cluster ID must be the same on all servers in the cluster",
+        "Description": "Sets the cluster ID for a server cluster. The cluster ID must be the same on all servers in the cluster. Requires Enable Cluster to be set",
         "Keywords": "cluster,id,clusterid",
         "FieldName": "clusterID",
         "InputType": "text",
@@ -2182,7 +2199,7 @@
         "DisplayName": "Proton GE Release Version (Linux)",
         "Category": "Updates",
         "Subcategory": "Runtime Configuration:build:3",
-        "Description": "Sets the Proton GE [release version](https://github.com/GloriousEggroll/proton-ge-custom/releases) to install. Blank = latest. Example: GE-Proton9-1",
+        "Description": "Sets the Proton GE [release version](https://github.com/GloriousEggroll/proton-ge-custom/releases) to install. Empty = latest. Example: GE-Proton9-1",
         "Keywords": "proton,release,version",
         "FieldName": "SpecificReleaseVersion",
         "InputType": "text",
@@ -2222,131 +2239,5 @@
             "False": "false",
             "True": "true"
         }
-    },
-		{
-        "DisplayName": "Egg Laying Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "Sets the interval for how long it takes for eggs to lay. Fertilized or Unfertilized. Lowering this value increases the amount of eggs during a given time",
-        "Keywords": "egg,breeding,multiplier,layegginterval",
-        "FieldName": "LayEggIntervalMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.LayEggIntervalMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	    {
-        "DisplayName": "Egg Hatch Speed Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "Sets the time it takes to hatch fertilized eggs. Lowering this value decreases the time to hatch",
-        "Keywords": "egg,hatch,speed,multiplier,breeding",
-        "FieldName": "EggHatchSpeedMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.EggHatchSpeedMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	    {
-        "DisplayName": "Mating Interval Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "Sets the scaling factor for the length of time for the mating cooldown. Lowering this value decreases the cooldown",
-        "Keywords": "mating,breeding,speed,multiplier,matinginterval",
-        "FieldName": "MatingIntervalMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.MatingIntervalMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	{
-        "DisplayName": "Baby Imprint Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "Sets the imprint multiplier during baby growth. A higher number decreases the amount of times a baby needs to imprint",
-        "Keywords": "imprint,breeding,growth,multipllier,babyimprintmultiplier",
-        "FieldName": "BabyImprintAmountMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyImprintAmountMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	{
-        "DisplayName": "Baby Mature Speed Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "Sets the maturation speed multiplier for baby growth. A higher number decreases the amount of times a baby needs to become juvenile or adult",
-        "Keywords": "speed,mature,breeding,growth,multipllier,babymaturespeedmultiplier",
-        "FieldName": "BabyMatureSpeedMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyMatureSpeedMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	{
-        "DisplayName": "Baby Cuddle Interval Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "Sets the time between cuddles needed for baby growth. A lower number decreases the time between cuddles",
-        "Keywords": "cuddle,interval,mature,breeding,growth,multipllier,babycuddleintervalmultiplier",
-        "FieldName": "BabyCuddleIntervalMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyCuddleIntervalMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	{
-        "DisplayName": "Baby Cuddle Grace Period Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "How long after delaying cuddling with the baby before imprinting quality starts to decrease.. A lower number decreases the time between cuddles",
-        "Keywords": "cuddle,grace,interval,mature,breeding,growth,multipllier,babycuddlegraceperiodmultiplier",
-        "FieldName": "BabyCuddleGracePeriodMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyCuddleGracePeriodMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	{
-        "DisplayName": "Baby Cuddle Lose Imprint Quality Speed Multiplier",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "How fast the imprinting quality decreases after the grace period if you haven't yet cuddled with the baby.. A lower number decreases the time between cuddles",
-        "Keywords": "cuddle,interval,mature,breeding,growth,multipllier,babycuddleintervalmultiplier",
-        "FieldName": "BabyCuddleLoseImprintQualitySpeedMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyCuddleLoseImprintQualitySpeedMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
-	{
-        "DisplayName": "Baby Food Consumption Speed",
-        "Category": "ARK SA:stadia_controller",
-        "Subcategory": "Breeding:tune:3",
-        "Description": "How fast the imprinting quality decreases after the grace period if you haven't yet cuddled with the baby.. A lower number decreases the time between cuddles",
-        "Keywords": "food,interval,mature,breeding,growth,multipllier,babyfoodconsumptionspeedmultiplier",
-        "FieldName": "BabyFoodConsumptionSpeedMultiplier",
-        "InputType": "number",
-        "ParamFieldName": "/Script/ShooterGame.ShooterGameMode.BabyFoodConsumptionSpeedMultiplier",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "1.000000",
-        "Placeholder": "1.000000",
-        "EnumValues": {}
-    },
+    }
 ]
